# hermes-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  prd.json  progress.txt  pyproject.toml  security-audit-report.json
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
.hermes/artifacts/: AGENTS.md
examples/: 01_tool_validation.py  02_step_enforcement.py  03_context_compaction.py  04_rescue_parsing.py
mcp_server/: run.py
scripts/: install-plugin.sh  security_audit.py
skills/forge-integration/: SKILL.md
src/hermes_forge/: __init__.py  __main__.py  cli.py  errors.py  mcp_server.py  mcp_server_entry.py  proxy_main.py  server.py
src/hermes_forge/clients/: anthropic.py  base.py  llamafile.py  ollama.py  openai_compat.py  sampling_defaults.py  vllm.py
src/hermes_forge/context/: hardware.py  manager.py  strategies.py
src/hermes_forge/core/: inference.py  messages.py  reasoning.py  runner.py  slot_worker.py  steps.py  workflow.py
src/hermes_forge/core/runner/: __init__.py  _runner.py
src/hermes_forge/guardrails/: error_tracker.py  guardrails.py  nudge.py  response_validator.py  step_enforcer.py
src/hermes_forge/prompts/: nudges.py  templates.py  think_tags.py
src/hermes_forge/proxy/: convert.py  handler.py  proxy.py  response.py  server.py
src/hermes_forge/tools/: __init__.py  budget.py  rescue.py  respond.py  step_order.py  validate.py  workflow.py
src/hermes_forge_plugin/: __init__.py  plugin.py  plugin.yaml
src/hermes_forge_plugin/hooks/: on_session_end.py  pre_llm_call.py  pre_tool_call.py
tests/: test_arch_refactor.py
tests/unit/: test_advanced.py  test_anthropic_client.py  test_core.py  test_server.py  verify_rescue.py
