[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-forge"
version = "0.1.0"
description = "A Hermes Agent MCP server and plugin bringing Forge's LLM tool-calling guardrails to Hermes — response validation, rescue parsing, step enforcement, and context management for reliable self-hosted LLM tool-calling."
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Hermes Forge Contributors"},
    {name = "Antoine Zambelli", email = "antoine.zambelli@gmail.com"},
]
readme = "README.md"
keywords = ["hermes", "forge", "llm", "tool-calling", "guardrails", "agents", "mcp", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "mcp>=1.0.0",
]
anthropic = [
    "anthropic>=0.70.0",
]
ollama = [
    "ollama>=0.4.0",
]
vllm = [
    "vllm>=0.6.0",
]
all = [
    "hermes-forge[anthropic,ollama,vllm]",
]

[project.urls]
Homepage = "https://github.com/iknowkungfubar/hermes-forge"
Repository = "https://github.com/iknowkungfubar/hermes-forge"
Documentation = "https://github.com/iknowkungfubar/hermes-forge/tree/main/docs"

[project.scripts]
hermes-forge = "hermes_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_forge", "src/hermes_forge_plugin", "mcp_server"]

[tool.hatch.build.targets.sdist]
exclude = [".github", "tests", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a running LLM backend (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["hermes_forge"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
